[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.27.0", features = ["rand-std", "bitcoin-hashes-std", "recovery"] }
serde = { version = "1.0", features = ["derive"] }
bs58 = "0.5.0"
zbase32 = "0.1.2"
sha2 = "0.10.7"